--- a/src/App.scss
+++ b/src/App.scss
@@ -20,8 +20,9 @@ body {
 .cards-container {
   width: 30vw;
 
+  gap: 12px;
   flex-grow: 1;
-  padding: 20px;
+  padding: 12px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4, 1fr);
