--- a/src/components/shared/sidebar/Sidebar.scss
+++ b/src/components/shared/sidebar/Sidebar.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 250px;
-    height: 100vh;
+    height: 100%;
     background-color: #333;
     color: white;
     transition: width 0.3s ease;
@@ -50,4 +50,14 @@
             }
         }
     }
+}
+
+.removeEmployeeButton {
+    background-color: #731B1B;
+}
+
+.editEmployeeButton {
+    background-color: #fcfcfc;
+    color: #000000;
+    border: 1px solid #000000;
 }
