--- a/src/components/delivery-card/DeliveryCard.scss
+++ b/src/components/delivery-card/DeliveryCard.scss
@@ -5,9 +5,9 @@
     width: 50vw;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
 
     @media (max-width: 800px) {
         width: 100vw;
