--- a/src/components/shared/add-employee-button/AddEmployeeButton.scss
+++ b/src/components/shared/add-employee-button/AddEmployeeButton.scss
@@ -1,13 +1,15 @@
-.addEmployeeButton {
+#addEmployeeButton {
     margin: 8px;
     height: 50px;
 
-    background: #1d4fda;
+    color: white;
+    background: #133697;
 
     display: flex;
     align-items: center;
 
     &:hover {
-        background: #133697;
+        color: black;
+        background: #A9CEF4;
     }
 }
