--- a/src/components/delivery-card/DeliveryCard.scss
+++ b/src/components/delivery-card/DeliveryCard.scss
@@ -1,3 +1,9 @@
-#delivery-card{
-    width: 90%;
+#delivery-card {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 8px;
+
+    
+    @media (max-width: 1023px) {
+        width: 75vw;
+    }
 }
