--- a/src/components/service-card/ServiceCard.scss
+++ b/src/components/service-card/ServiceCard.scss
@@ -1,3 +1,9 @@
 #service-card {
-    width: 90%;
+
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 8px;
+
+    @media (max-width: 1023px) {
+        width: 75vw;
+    }
 }
