--- a/src/components/shared/sidebar/Sidebar.scss
+++ b/src/components/shared/sidebar/Sidebar.scss
@@ -8,6 +8,10 @@
     color: white;
     transition: width 0.3s ease;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     &.collapsed {
         width: 88px;
 
@@ -16,18 +20,7 @@
         }
     }
 
-    .toggle-btn {
-        width: 100%;
-        color: white;
-        border: none;
-        padding: 10px;
-        cursor: pointer;
-        text-align: left;
 
-        &:hover {
-            background-color: #555;
-        }
-    }
 
     .sidebar-menu {
         list-style: none;
@@ -49,6 +42,27 @@
                 padding: 3px 8px;
             }
         }
+    }
+
+    @media screen and (max-width: 768px) {
+
+        position: absolute;
+
+        &.collapsed {
+            width: 72px;
+            height: 30px;
+            position: absolute;
+        }
+
+    }
+}
+
+.toggle-btn {
+    color: white;
+    padding: 10px;
+
+    &:hover {
+        background-color: #555;
     }
 }
 
