--- a/src/components/finished-delivery-card/FinishedDeliveryCard.module.scss
+++ b/src/components/finished-delivery-card/FinishedDeliveryCard.module.scss
@@ -1,9 +1,10 @@
-#service-card {
-
+.finishedDeliveryCard {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 8px;
+
 
     @media (max-width: 1023px) {
         width: 75vw;
     }
+
 }
