--- a/src/components/service-card/ServiceCard.module.scss
+++ b/src/components/service-card/ServiceCard.module.scss
@@ -1,10 +1,9 @@
-.finished-delivery-card {
+.serviceCard {
+
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 8px;
 
-    
     @media (max-width: 1023px) {
         width: 75vw;
     }
-
 }
