refactor: add new service. now working

--- a/src/components/shared/assign-employee-to-service/AssignEmployeeToService.module.scss
+++ b/src/components/shared/assign-employee-to-service/AssignEmployeeToService.module.scss
@@ -13,5 +13,13 @@
     background: white;
     color: #19aa31;
 
+    border: 1px solid #19aa31;
+
 
 }
+
+.employeeSelect {
+    background: white;
+}
+
+.employeeInputText {}
