Refactor styles: Update card content and header styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,19 @@ body {
   }
 }
 
+// .cardContentController {
+//   visibility: hidden;
+//   height: 1vh;
+//   width: 1vw;
+//   overflow: hidden;
+// }
+
+// .cardMainHeader {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
+
 
 
 @layer base {
