--- a/src/components/shared/observation-description-card/ObservationDescriptionCard.module.scss
+++ b/src/components/shared/observation-description-card/ObservationDescriptionCard.module.scss
@@ -6,3 +6,9 @@
     font-weight: bolder;
     font-size: 1em;
 }
+
+.serviceDescriptionFooter {
+    display: flex;
+    flex-direction: column;
+
+}
