--- a/src/components/shared/sidebar/Sidebar.scss
+++ b/src/components/shared/sidebar/Sidebar.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 250px;
-    height: 100%;
+    min-height: 100%;
     background-color: #333;
     color: white;
     transition: width 0.3s ease;
