--- a/src/components/shared/observation-sheet/ObservationSheet.module.scss
+++ b/src/components/shared/observation-sheet/ObservationSheet.module.scss
@@ -19,8 +19,8 @@
     height: 32px;
     border-radius: 16%;
 
-    background: white;
-    color: #0d9c44;
+    // background: white;
+    color: white;
 
     &:hover {
         scale: 1.3;
