--- a/src/components/shared/service-table/ServiceTable.module.scss
+++ b/src/components/shared/service-table/ServiceTable.module.scss
@@ -13,3 +13,20 @@
     align-items: center;
     padding: 0 24px;
 }
+
+.ActionButtons {
+    display: flex;
+    flex-direction: column;
+
+
+    align-items: center;
+    justify-content: center;
+}
+
+.firstActionButtonsRow {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: center;
+}
