Refactor styles for remove employee button and edit employee sheet

--- a/src/components/shared/edit-service-sheet/EditServiceSheet.module.scss
+++ b/src/components/shared/edit-service-sheet/EditServiceSheet.module.scss
@@ -1,11 +1,10 @@
 .editEmployeeButton {
     background: #BF980D;
-    width: 104px;
-
-    font-weight: bold;
+    color: white;
+    border: none;
 
     &:hover {
-        color: white;
-        background: #BF980D;
+        background: #F4D35E;
+        border: none;
     }
 }
