--- a/src/components/shared/sidebar/Sidebar.scss
+++ b/src/components/shared/sidebar/Sidebar.scss
@@ -46,10 +46,12 @@
 
     @media screen and (max-width: 768px) {
 
-        position: absolute;
+        // position: absolute;
+
+        margin: 0 80px 0 0;
 
         &.collapsed {
-            width: 72px;
+            width: 0;
             height: 30px;
             position: absolute;
         }
